tests/e2e/dot_mutation_chain_int3_invalid_param.story
a = 1.increment(a: 1)
